fix analytics